--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,15 @@ packages = [{include = "latent_tasks_dialogue_system"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-streamlit = "^1.26.0"
+streamlit = "^1.28.2"
 langchain = "^0.0.283"
 openai = "^0.28.0"
+scikit-learn = "^1.3.1"
+tabulate = "^0.9.0"
+fugashi = "^1.3.0"
+ipadic = "^1.0.0"
+transformers = "^4.34.0"
+mecab-python = "^1.0.0"
 
 
 [build-system]
